@startuml
title Sistema de Lava Jato - Nivel 2

package "app/models" {
  abstract class Pessoa {
    - nome: str
    - telefone: str
    + resumo(): str
  }

  class Cliente {
    - cpf: str
    - veiculos: list[Veiculo]
    + adicionar_veiculo(veiculo): void
    + resumo(): str
  }

  class Funcionario {
    - matricula: str
    - cargo: str
    + resumo(): str
    + executar_servico(servico): str
  }

  class Veiculo {
    - placa: str
    - modelo: str
    - porte: str
    + resumo(): str
  }

  abstract class Servico {
    - nome: str
    - preco_base: float
    + calcular_preco(): float
    + descricao(): str
  }

  class LavagemSimples {
    + calcular_preco(): float
  }

  class LavagemCompleta {
    + calcular_preco(): float
  }

  class Polimento {
    + calcular_preco(): float
  }

  class ItemServico {
    - servico: Servico
    - funcionario: Funcionario
    + subtotal(): float
    + resumo(): str
  }

  class Pagamento {
    - forma: str
    - valor: float
    - confirmado: bool
    + confirmar(): void
  }

  class OrdemServico {
    - codigo: int
    - data: date
    - status: StatusOrdem
    - itens: list[ItemServico]
    - pagamento: Pagamento
    + adicionar_servico(servico, funcionario): void
    + total(): float
    + finalizar(forma_pagamento): void
    + resumo(): str
  }

  enum StatusOrdem {
    ABERTA
    FINALIZADA
  }
}

package "app/services" {
  class RelatorioFinanceiro {
    + gerar(ordens): str
  }
}

package "app/controllers" {
  class LavaJatoApp {
    - clientes: list[Cliente]
    - funcionarios: list[Funcionario]
    - ordens: list[OrdemServico]
    + executar(): void
    + cadastrar_cliente(): Cliente
    + cadastrar_veiculo(): Veiculo
    + cadastrar_funcionario(): Funcionario
    + registrar_lavagem(): OrdemServico
    + finalizar_ordem(): OrdemServico
    + listar_ordens(): void
    + mostrar_relatorio(): void
  }
}

package "app/views" {
  class MenuTerminal {
    + mostrar_menu_principal(): void
    + executar_submenu(titulo, opcoes): void
    + imprimir_caixa(titulo, linhas): void
    + exibir(mensagem): void
    + ler(mensagem): str
  }
}

component "main.py" as Main

Pessoa <|-- Cliente
Pessoa <|-- Funcionario
Servico <|-- LavagemSimples
Servico <|-- LavagemCompleta
Servico <|-- Polimento

Cliente "1" -- "0..*" Veiculo : associacao
OrdemServico "1" -- "1" Cliente : associacao
OrdemServico "1" -- "1" Veiculo : associacao
OrdemServico "1" *-- "1..*" ItemServico : composicao
OrdemServico "1" *-- "0..1" Pagamento : composicao
ItemServico "1" -- "1" Servico : associacao
ItemServico "1" -- "1" Funcionario : associacao
OrdemServico --> StatusOrdem
RelatorioFinanceiro ..> OrdemServico : dependencia
Funcionario ..> Servico : polimorfismo
LavaJatoApp o-- Cliente : gerencia
LavaJatoApp o-- Funcionario : gerencia
LavaJatoApp o-- OrdemServico : registra
LavaJatoApp ..> RelatorioFinanceiro : emite
LavaJatoApp --> MenuTerminal : usa
Main ..> LavaJatoApp : inicia

note right of Servico
Polimorfismo:
calcular_preco() muda conforme
LavagemSimples, LavagemCompleta
ou Polimento.
end note

@enduml
